--- a/qPedido/.classpath
+++ b/qPedido/.classpath
@@ -94,5 +94,21 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis-ext.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis-xerces-2.9.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.5.0-b05.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.5.0-b32.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.json-1.0.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-2.26-b02.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core-2.26-b02.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-entity-filtering-2.25.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-guava-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb-2.25.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-moxy-2.25.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server-2.26-b02.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
