--- a/qPedido/.classpath
+++ b/qPedido/.classpath
@@ -110,5 +110,9 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb-2.25.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-moxy-2.25.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server-2.26-b02.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.asm-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.core-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.moxy-2.6.0.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
