--- a/qPedido/.classpath
+++ b/qPedido/.classpath
@@ -12,107 +12,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/barbecue-1.5-beta1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/barcode4j-2.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-anim.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-awt-util.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-bridge.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-css.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-dom.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-ext.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-gvt.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-parser.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-script.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-svg-dom.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-svggen.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-util.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/batik-xml.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/bcel-5.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/bluesky-1.0.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/bsh-2.1b5.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/c3p0-0.9.1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/classmate-1.3.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.8.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-collections-3.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-digester-2.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.0.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-javaflow-20060411.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-net-3.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/core-renderer-R8-sources.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/core-renderer-R8.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/core-renderer.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/emailErroTjse.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/fonts.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/groovy-all-1.7.5.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-core-5.2.6.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iDOBase.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iText-2.1.7-sources.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/iText-2.1.7.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jandex-2.0.3.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jasperreports-5.6.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jaxen-1.1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-logging-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-logging-annotations-1.2.0.Beta1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-transaction-api_1.2_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jcommon-1.0.15.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jdt-compiler-3.1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jfreechart-1.0.12.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/joda-time-2.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jpa.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsf-api.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsf-impl.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsoup-1.7.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-2.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jta-1.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jtar-2.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jtidy-r938.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/juel-impl-2.2.6-sources.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/juel-impl-2.2.6.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jxl-2.6.10.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mondrian-3.2.0-13661-JS.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/png-encoder-1.5.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/poi-3.7-20101029.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-6.0-sources.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-6.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/quartz-all-2.1.6.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/rhino-1.7R1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/saaj-api-1.3.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-api-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/slf4j-log4j12-1.6.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/spring.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/standard.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis-ext.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis-xerces-2.9.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-api-2.5.0-b05.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-locator-2.5.0-b05.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hk2-utils-2.5.0-b05.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.annotation-api-1.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.inject-2.5.0-b32.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.json-1.0.4.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.ws.rs-api-2.0.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-client-2.26-b02.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-common-2.25.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet-core-2.26-b02.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-container-servlet.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-entity-filtering-2.25.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-guava-2.25.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-jaxb-2.25.1.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-media-moxy-2.25.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jersey-server-2.26-b02.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.asm-2.6.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.core-2.6.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/org.eclipse.persistence.moxy-2.6.0.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
