--- a/qPedido/WebContent/WEB-INF/hibernate.properties
+++ b/qPedido/WebContent/WEB-INF/hibernate.properties
@@ -1,8 +1,13 @@
-hibernate.connection.url=
-hibernate.connection.password=
-hibernate.connection.username=
-hibernate.connection.driver_class=
+hibernate.connection.url=jdbc:postgresql://162.243.113.238:5432/projeto
+
+hibernate.connection.password=joro01
+
+hibernate.connection.username=projeto
+
+hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.isolation=2
-hibernate.dialect=opcional
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=false
 hibernate.connection.provider_class=org.hibernate.connection.DriverManagerConnectionProvider
+hibernate.ejb.discard_pc_on_close=true
+hibernate.connection.release_mode=after_transaction
