--- a/qPedido/WebContent/WEB-INF/web.xml
+++ b/qPedido/WebContent/WEB-INF/web.xml
@@ -87,8 +87,8 @@
     </auth-constraint>
   </security-constraint>
   <resource-ref>
-    <description>Conexão com o Caché.</description>
-    <res-ref-name>jdbc/cacheapp</res-ref-name>
+    <description>Conexão com o Postgres.</description>
+    <res-ref-name>jdbc/cachepostgres</res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
