Funcionalidades de login, e início de CRUD para mesas.

--- a/qPedido/src/br/com/ido/qpedido/util/Bundle.properties
+++ b/qPedido/src/br/com/ido/qpedido/util/Bundle.properties
@@ -119,6 +119,7 @@ visualizarRegistro=Visualizar processo
 menuCadastro=Cadastro
 menuCadastroTipoPag=Tipo de pagamento
 menuCadastroEmpresa=Empresa
+menuCadastroMesa=Mesa
 
 tipoPagamentoTitulo=Tipos de Pagamento
 tipoPagamentoTipoPag=Tipo de Pagamento
@@ -136,4 +137,9 @@ empresaTelefone=Telefone
 empresaLogo=Logomarca
 empresaAtivo=Ativo
 
+qrcode_Titulo=Gerar QR Code
+
+
+mesa_cadastroTitulo=Cadastro de Mesa
+mesa_consultaTitulo=Consulta de Mesas
 
