--- a/qPedido/WebContent/WEB-INF/web.xml
+++ b/qPedido/WebContent/WEB-INF/web.xml
@@ -46,34 +46,24 @@
     <listener-class>br.com.ido.qpedido.util.config.Config</listener-class>
   </listener>
   <servlet>
-    <servlet-name>Faces Servlet</servlet-name>
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <servlet-name>Web Service</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>br.com.ido.qpedido.servicos</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  
   <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>*.ido</url-pattern>
+    <servlet-name>Web Service</servlet-name>
+    <url-pattern>/ws/*</url-pattern>
   </servlet-mapping>
-    <servlet>
-        <servlet-name>Web Service</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>br.com.ido.qpedido.servicos</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-   <servlet-mapping>
-        <servlet-name>Web Service</servlet-name>
-        <url-pattern>/ws/*</url-pattern>
-    </servlet-mapping>
   <session-config>
     <session-timeout>20</session-timeout>
   </session-config>
   <error-page>
     <error-code>403</error-code>
-    <location>/paginas/erro/Autorizacao.ido</location>
+    <location>/paginas/erro/Autorizacao.proj</location>
   </error-page>
   <security-constraint>
     <display-name>Restrict XHTML Documents</display-name>
@@ -95,4 +85,13 @@
   <welcome-file-list>
     <welcome-file>/paginas/index.html</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.proj</url-pattern>
+  </servlet-mapping>
 </web-app>
