Ajustes no CRUD de mesas, na geração do qrcode, e em alguns estilos.

--- a/qPedido/src/br/com/ido/qpedido/util/Bundle.properties
+++ b/qPedido/src/br/com/ido/qpedido/util/Bundle.properties
@@ -142,4 +142,8 @@ qrcode_Titulo=Gerar QR Code
 
 mesa_cadastroTitulo=Cadastro de Mesa
 mesa_consultaTitulo=Consulta de Mesas
+mesa_alterarTitulo=Alteração de Mesas
+mesa_numeroMesa=Número da Mesa
+mesa_qtdCadeiras=Qtd. de Cadeiras
+
 
