--- a/qPedido/WebContent/WEB-INF/web.xml
+++ b/qPedido/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  <display-name>BringMe</display-name>
+  <display-name>meSirva</display-name>
   <context-param>
     <param-name>LOCALE</param-name>
     <param-value>pt-BR</param-value>
@@ -11,7 +11,7 @@
   </context-param>
   <context-param>
     <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-    <param-value>/WEB-INF/bringme.taglib.xml</param-value>
+    <param-value>/WEB-INF/meSirva.taglib.xml</param-value>
   </context-param>
   <context-param>
     <param-name>primefaces.THEME</param-name>
