--- a/qPedido/WebContent/WEB-INF/web.xml
+++ b/qPedido/WebContent/WEB-INF/web.xml
@@ -43,14 +43,14 @@
   </listener>
   <listener>
     <description>Inicializando parâmetros do sistema</description>
-    <listener-class>br.com.ido.qpedido.util.config.Config</listener-class>
+    <listener-class>br.com.ido.mesirva.util.config.Config</listener-class>
   </listener>
   <servlet>
     <servlet-name>Web Service</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>br.com.ido.qpedido.servicos</param-value>
+      <param-value>br.com.ido.mesirva.servicos</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
